# CS162

./: README.md  lambda-plus.md
code/: bvlang.rkt  closure.ml  datatypes.ml  debug.rkt  goleta.dl  highorder.ml  recursion.ml  solve.rkt  synth.rkt  verify.rkt
homework/: README.md  hw1.md  listOps.ml  numOps.ml
homework/hw1/: README.md  arith.ml  arith.mli  cat.ml  cat.mli  choose.ml  choose.mli  compress.ml  compress.mli  dune-project  fib.ml  graft.ml  graft.mli  hw1.opam  hw1_sol.md  max.ml  max.mli  paths.ml  paths.mli  relabel.ml  relabel.mli  rev.ml  rev.mli  sol.md
homework/hw1/lib/: dune  part1.ml  part2.ml  part2.mli  part3.ml  part3.mli  part4.ml  part4.mli  util.ml
homework/hw1/test/: dune  hw1_test.ml  part1.ml  part2.ml  part3.ml  part4.ml  utils.ml
homework/hw2/: Makefile  README.html  README.md  arith.ml  compress.ml  dune-project  eval.ml  exp.ml  hw2.md  hw2.opam  inf.ml  inf.mli  lc.ml  lexer.ml  main.ml  parser.ml  sol.md  solutions.md  turing.ml
homework/hw2/lib/lamp/: ast.ml  dune  eval.ml  lamp.opam  parse_util.ml  parser.mly  repl.ml  vars.mli
homework/hw2/lib/part1/: dune  part1.ml  part1.mli  util.ml  util.mli
homework/hw2/lib/part2/: ast.ml  dune  eval.ml  eval.mli  parser.mly  scanner.mll  vars.ml  vars.mli
homework/hw2/lib/part2/examples/: apply.lp  true.lp
homework/hw2/lib/part4/: and.lp  bool_to_int.lp  ff.lp  imply.lp  join.lp  none.lp  option_to_int.lp  or.lp  some.lp  tt.lp  xor.lp
homework/hw2/test/: dune  hw2_test.ml  test_lamp.ml  test_part1.ml  test_part2.ml  test_part4.lp
homework/hw3/: Makefile  README.md  ast.ml  decoders.txt  dune-project  encodings.txt  eval.ml  hw3.md  hw3.ml  hw3.opam  parser.mly  repl.ml  scanner.mll  template.tex  test.ml  visitor.py
homework/hw3/lamp/: ast.ml  cmd.ml  err.ml  eval.mli  lamp.opam  lexer.mll  menhir_parser.mly  parser.ml  vars.mli
homework/hw3/lib/lamp/: ast.ml  cmd.ml  dune  eval.ml  parse_util.ml  parser.mly  scanner.mll  vars.ml
homework/hw3/lib/meta/: dune  encodings.ml  lp_to_ml.sh  meta.lp  meta.ml  meta_lp.ml
homework/hw3/lib/meta/output/: meta_lp.ml
homework/hw3/test/: dune  hw3_test.ml  test_lamp.ml  test_meta.ml
homework/hw3/test/examples/: add_n.lp  fib.lp  fib_int.lp  fib_pair.lp  max_ext.lp  mutual_rec.lp  mutual_rec_int.lp  primes.lp  primes_internal.lp
homework/hw4/: Makefile  README.md  ast.ml  dune  dune-project  eval.ml  hw4.md  hw4.opam  infer.ml  parser.mly  repl.ml  test.ml  typecheck.ml  unify.ml
homework/hw4/hw4_basic/: Makefile  ast.ml  unify.ml
homework/hw4/hw4_basic/Ref/4.05.0/: infer.cmi  infer.cmo
homework/hw4/hw4_basic/Ref/4.06.0/: infer.cmi  infer.cmo
homework/hw4/hw4_basic/Ref/4.06.1/: infer.cmi  infer.cmo
homework/hw4/hw4_basic/Ref/4.07.0/: infer.cmi  infer.cmo
homework/hw4/hw4_basic/Ref/4.07.1/: infer.cmi  infer.cmo
homework/hw4/hw4_basic/Ref/4.08.0/: infer.cmi  infer.cmo
homework/hw4/hw4_basic/Ref/4.08.1/: infer.cmi  infer.cmo
homework/hw4/hw4_basic/Ref/4.09.0/: infer.cmi  infer.cmo
homework/hw4/hw4_bonus/: Makefile  infer.ml  repl.ml
homework/hw4/hw4_bonus/Parser/: lexer.mll  parser.mly
homework/hw4/lamp/: ast.ml  cmd.ml  dune  lexer.mll  menhir_parser.mly  typecheck.ml  typecheck.mli
homework/hw4/lib/lamp/: ast.ml  cmd.ml  dune  parse_util.ml  parser.mly  scanner.mll  typecheck.ml
homework/hw4/lib/meta/: encodings.ml  meta.ml  txt_to_ml.sh
homework/hw4/test/: dune  hw4_test.ml  test_typing.ml
homework/hw4/test/examples/: add_n.lp  fib.lp
homework/hw5/: Makefile  README.md  ast.ml  dune  dune-project  eval.ml  hw5.opam  hw5.rkt  parser.mly  repl.ml  scanner.mll  test.ml  typecheck.ml  typeinfer.ml
homework/hw5/bvv/: bv.rkt  examples.rkt  solver.rkt  tests.rkt  verifier.rkt
homework/hw5/lamp/: ast.ml  curry_howard.ml  curry_howard.mli  dune  eval.ml  lexer.mll  menhir_parser.mly  parser.ml  typecheck.mli  typeinfer.ml  typeinfer.mli
homework/hw5/lib/lamp/: ast.ml  cmd.ml  curry_howard.ml  curry_howard.mli  dune  eval.ml  eval.mli  parser.mly  scanner.mll  typeinfer.ml  typeinfer.mli  vars.ml  vars.mli
homework/hw5/lib/meta/: encodings.txt
homework/hw5/test/: dune  hw5_test.ml  test_gen.ml  test_solving.ml  test_typing.ml  test_utils.ml
homework/hw5/test/examples/: add_n.lp  fib.lp  foldr.lp  length.lp  length_poly.lp  map_filter.lp
homework/hw6/: README.md  anderson.csv  anderson.dl  ast.ml  dune  steensgaard.csv  steensgaard.dl  taint.csv  taint.dl  typecheck.ml  typeinfer.mli
homework/hw6/anderson/: assign.facts
homework/hw6/steensgaard/: addressTaken.facts  load.facts  store.facts
homework/hw6/taint/: fieldLoad.facts  fieldStore.facts  sink.facts  source.facts
lectures/: curry_howard.ml  lecture10.key  lecture13.key  lecture3.key  lecture4.key  lecture5.key  lecture7.key  lecture8.key  lecture9.key
sections/: README.md
sections/sec01/: README.md  install.md  notes.md
sections/sec02/: sec02.ml
sections/sec03/: README.html  README.md  sec03.ml  template.md
sections/section1/: README.md  additional_code.ml  example.ml  install_ocaml.md
sections/section2/: README.md  demo.ml  sec2.ml
sections/section3/: demo.ml  sec3.ml
sections/section4/: sec4.lp
sections/section6/: ill-typed1.lp  ill-typed2.lp  let-bind.lp  recursion.lp  well-typed1.lp  well-typed2.lp
sessions/: guide.rkt  mytest.ml  smt.rkt
