(lang dune 3.11)

(name hw2)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(documentation https://url/to/documentation)

(package
 (name hw2)
 (allow_empty)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  (ocaml
   (= 4.14.1))
  dune
  base
  alcotest
  ppx_deriving
  ppx_import
  utop
  linenoise
  fmt)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
