(lang dune 3.11)

(name hw4)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Junrui Liu, Bryan Tan, Yu Feng")

(maintainers "Junrui Liu")

(documentation https://url/to/documentation)

(using menhir 2.1)

(package
 (name hw4)
 (allow_empty)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends dune base menhir nice_parser alcotest utop linenoise fmt)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
