(lang dune 3.11)

(name hw5)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Junrui Liu, Bryan Tan, Yu Feng")

(maintainers "Junrui Liu")

(documentation https://url/to/documentation)

(package
 (name hw5)
 (allow_empty)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  (ocaml
   (= 4.14.1))
  dune
  base
  alcotest
  ppx_deriving
  ppx_import
  ppx_sexp_conv
  utop
  linenoise
  fmt)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
