; Build configuration

; Treat warnings as non-fatal

(env
 (dev
  (flags
   (:standard -warn-error -A))))

; ---------------
; lamp main files

(library
 (name lamp)
 (preprocess
  (pps ppx_deriving.show ppx_jane ppx_sexp_conv))
 (libraries base fmt nice_parser))

(ocamllex lexer)

(menhir
 (modules menhir_parser))
