; Build configuration

; Treat warnings as non-fatal

(env
 (dev
  (flags
   (:standard -warn-error -A))))

; ---------------
; lamp main files

(library
 (name lamp)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_sexp_conv))
 (libraries base fmt)
 (modules
  ast
  scanner
  parser
  parse_util
  vars
  eval
  err
  cmd
  typecheck
  typeinfer)
 (wrapped false))

(library
 (name curry_howard)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_sexp_conv))
 (libraries base fmt lamp)
 (modules curry_howard))

(ocamllex scanner)

(ocamlyacc parser)
